2007-08-08  Alexander V. Lukyanov <lav@yars.free.net>

	* ResMgr.cc, url.cc: use xstring and StringSet.
	* xarray.cc, xarray.h: new files.
	* Makefile.am: add xarray files.
	* NetAccess.cc, NetAccess.h, ftpclass.cc, Http.cc, FileSet.cc,
	  FileSet.h, PollVec.cc, PollVec.h, ColumnOutput.cc, ColumnOutput.h,
	  Resolver.cc, Resolver.h: use xarray.
	* StringSet.h: (borrow) new method.
	* Ref.h: make RefArray a friend.

2007-08-06  Alexander V. Lukyanov <lav@yars.free.net>

	* FileSet.h, FileSet.cc: (NotNewerThan, NotOlderThan, Subtract*) new methods.
	* MirrorJob.cc: use SubtractNotNewerThan and SubtractNotOlderThan.

2007-08-02  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, NetAccess.cc, NetAccess.h: increment retries on
	  soft transfer errors which do not cause disconnect; check retry
	  count before re-starting transfer.
	* FileCopy.cc: increment saved retry count before next try.
	* resource.cc: remove obsolete code.
	* log.cc, log.h: use Ref; use xstring::vsetf.
	* keyvalue.cc, keyvalue.h: use xstring::appendf.
	* ArgV.cc, CmdExec.cc: use xstring.

2007-07-31  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc: set STORE_FAILED error properly in some cases.
	* ftpclass.cc, ftpclass.h, resource.cc: new setting ftp:use-stat-for-list.

2007-07-30  Alexander V. Lukyanov <lav@yars.free.net>

	* SFtp.cc: clear handle on disconnect (fixes coredump).

2007-07-27  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: add $$ eval substitution.
	* xstring.cc, xstring.h: (appendf, vappendf) new methods.

2007-07-26  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: (eval) new command.

2007-07-26  Alexander V. Lukyanov <lav@yars.free.net>

	* ColumnOutput.cc, ColumnOutput.h: use Refs.
	* CopyJob.cc, CopyJob.h: use Refs; allow to specify CopyJob creator
	  for CopyJobEnv.
	* FileCopy.cc, FileCopy.h: close session when it's not needed; suspend
	  only open sessions; new Clone methods; disallow negative buf size.