@@ -1,3 +1,10 @@
+2007-08-10  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* Ref.h, xarray.h, SMTash.h: make a base class _RefArray; new class
+	  TaskRefArray; new class xarray_p; (xarray::borrow) new method.
+	* StringPool.cc, StringPool.h, StringSet.cc, StringSet.h: use xarray_p.
+	* pgetJob.cc, pgetJob.h: use TaskRefArray.
+
 2007-08-08  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* ResMgr.cc, url.cc: use xstring and StringSet.
